# Pos_Tech_MLET

.github/workflows/: sync-fork.yml
productization/: CONTRIBUTING.md  Dockerfile  README.md
productization/src/: README.md  pyproject.toml
productization/src/app/: __init__.py  main.py
productization/src/app/model/: data.py  lstm.py  lstm_params.py
productization/src/app/schemas/: __init__.py  endpoints.py
productization/src/app/train/: __init__.py  model.py
productization/src/infra/terraform/: locals.tf  main.tf  outputs.tf  providers.tf  variables.tf
productization/src/tests/: conftest.py  test_lstm_data.py  test_lstm_factory.py  test_training_strategies.py
src/: pyproject.toml
src/architectures/rnns/: lstm.py
src/optimization/: quantization.py
src/optimization/notebooks/: DistillationNotebook.ipynb  PruningNotebook.ipynb  QuantizationNotebook.ipynb
src/optimization/operation/: quantization_productization.py
src/optimization/specialization/: lora_example.ipynb  lora_example.py  transfer_diff.ipynb  transfer_diff.py  transfer_same.ipynb  transfer_same.py
summarization/requirements/: dev-requirements.txt  requirements.txt
summarization/src/: experiment.py  model_selector.py
